# seifmios

./: .gitignore  Cargo.toml  LICENSE
irc/: testing.json
src/: main.rs
src/chat/: discord.rs  irc.rs  mod.rs
src/cli/: mod.rs
src/climios/: main.rs
src/seifmios/: main.rs
src/seifmios/chat/: discord.rs  irc.rs  mod.rs  server.rs
src/seifmios/cli/: mod.rs
src/seifmios/text/: category.rs  lexicon.rs  message.rs  mod.rs  pord_macros.rs  word_instance.rs
src/shared/: ipc.rs
src/text/: author.rs  category.rs  conversation.rs  lexicon.rs  message.rs  mod.rs  source.rs  word.rs  word_instance.rs
