[package]
name = "seifmios"
description = "A chatbot"
repository = "https://github.com/mraof/seifmios"
version = "0.0.0"
authors = ["Mraof <mraof@mraof.com>", "Geordon Worley <vadixidav@gmail.com>"]
keywords = ["chat", "bot", "chatbot", "seifmios"]
license = "BSD-2-Clause"

[dependencies]
rand = "0.3.14"
crossbeam = "0.2.9"
itertools = "0.4.13"
either = "0.1.6"
irc = "0.11.3"
discord = "0.5.0"
serde = "0.7.4"
serde_json = "0.7.0"
serde_macros = "0.7.4"
